build-files/metaphlan/4.2.2/README.md
# MetaPhlAn container

Main tool: [MetaPhlAn](https://github.com/biobakery/biobakery/wiki/metaphlan4)
  
Code repository: https://github.com/biobakery/MetaPhlAn


<details>

<summary>Additional tools installed via micromamba:</summary>

```
  Name                           Version         Build                    Channel    
───────────────────────────────────────────────────────────────────────────────────────
  _libgcc_mutex                  0.1             conda_forge              conda-forge
  _openmp_mutex                  4.5             2_gnu                    conda-forge
  _r-mutex                       1.0.1           anacondar_1              conda-forge
  anyio                          4.9.0           pyh29332c3_0             conda-forge
  argcomplete                    3.6.2           pyhd8ed1ab_0             conda-forge
  argon2-cffi                    25.1.0          pyhd8ed1ab_0             conda-forge
  argon2-cffi-bindings           21.2.0          py312h66e93f0_5          conda-forge
  arrow                          1.3.0           pyhd8ed1ab_1             conda-forge
  asttokens                      3.0.0           pyhd8ed1ab_1             conda-forge
  async-lru                      2.0.5           pyh29332c3_0             conda-forge
  attrs                          25.3.0          pyh71513ae_0             conda-forge
  babel                          2.17.0          pyhd8ed1ab_0             conda-forge
  bcbio-gff                      0.7.1           pyh7e72e81_2             bioconda   
  beautifulsoup4                 4.13.4          pyha770c72_0             conda-forge
  binutils_impl_linux-64         2.44            h4bf12b8_1               conda-forge
  bioconductor-biobase           2.66.0          r44h3df3fcb_0            bioconda   
  bioconductor-biocgenerics      0.52.0          r44hdfd78af_3            bioconda   
  bioconductor-biomformat        1.34.0          r44hdfd78af_0            bioconda   
  bioconductor-biostrings        2.74.0          r44h3df3fcb_1            bioconda   
  bioconductor-data-packages     20250625        hdfd78af_0               bioconda   
  bioconductor-genomeinfodb      1.42.0          r44hdfd78af_2            bioconda   
  bioconductor-genomeinfodbdata  1.2.13          r44hdfd78af_0            bioconda   
  bioconductor-iranges           2.40.0          r44h3df3fcb_2            bioconda   
  bioconductor-microbiome        1.28.0          r44hdfd78af_0            bioconda   
  bioconductor-multtest          2.62.0          r44h3df3fcb_1            bioconda   
  bioconductor-phyloseq          1.50.0          r44hdfd78af_0            bioconda   
  bioconductor-rhdf5             2.50.0          r44h77050f0_1            bioconda   
  bioconductor-rhdf5filters      1.18.0          r44h77050f0_1            bioconda   
  bioconductor-rhdf5lib          1.28.0          r44h15a9599_0            bioconda   
  bioconductor-s4vectors         0.44.0          r44h3df3fcb_2            bioconda   
  bioconductor-ucsc.utils        1.2.0           r44h9ee0642_1            bioconda   
  bioconductor-xvector           0.46.0          r44h15a9599_2            bioconda   
  bioconductor-zlibbioc          1.52.0          r44h3df3fcb_2            bioconda   
  biom-format                    2.1.16          py312h66e93f0_2          conda-forge
  biopython                      1.85            py312h66e93f0_1          conda-forge
  blast                          2.16.0          h66d330f_5               bioconda   
  bleach                         6.2.0           pyh29332c3_4             conda-forge
  bleach-with-css                6.2.0           h82add2a_4               conda-forge
  bowtie2                        2.5.4           he96a11b_6               bioconda   
  brotli                         1.1.0           hb9d3cd8_3               conda-forge
  brotli-bin                     1.1.0           hb9d3cd8_3               conda-forge
  brotli-python                  1.1.0           py312h2ec8cdc_3          conda-forge
  bwidget                        1.10.1          ha770c72_1               conda-forge
  bx-python                      0.13.0          py312h5e9d817_1          bioconda   
  bzip2                          1.0.8           h4bc722e_7               conda-forge
  c-ares                         1.34.5          hb9d3cd8_0               conda-forge
  ca-certificates                2025.7.14       hbd8a1cb_0               conda-forge
  cached-property                1.5.2           hd8ed1ab_1               conda-forge
  cached_property                1.5.2           pyha770c72_1             conda-forge
  cairo                          1.18.4          h3394656_0               conda-forge
  capnproto                      1.0.2           h766bdaa_3               conda-forge
  certifi                        2025.7.14       pyhd8ed1ab_0             conda-forge
  cffi                           1.17.1          py312h06ac9bb_0          conda-forge
  charset-normalizer             3.4.2           pyhd8ed1ab_0             conda-forge
  click                          8.2.1           pyh707e725_0             conda-forge
  cmseq                          1.0.4           pyhb7b1952_0             bioconda   
  comm                           0.2.2           pyhd8ed1ab_1             conda-forge
  contourpy                      1.3.2           py312h68727a3_0          conda-forge
  curl                           8.14.1          h332b0f4_0               conda-forge
  cycler                         0.12.1          pyhd8ed1ab_1             conda-forge
  debugpy                        1.8.15          py312h8285ef7_0          conda-forge
  decorator                      5.2.1           pyhd8ed1ab_0             conda-forge
  defusedxml                     0.7.1           pyhd8ed1ab_0             conda-forge
  dendropy                       5.0.8           pyhdfd78af_1             bioconda   
  diamond                        2.1.12          h13889ed_3               bioconda   
  entrez-direct                  22.4            he881be0_0               bioconda   
  exceptiongroup                 1.3.0           pyhd8ed1ab_0             conda-forge
  executing                      2.2.0           pyhd8ed1ab_0             conda-forge
  fasttree                       2.1.11          h7b50bb2_5               bioconda   
  font-ttf-dejavu-sans-mono      2.37            hab24e00_0               conda-forge
  font-ttf-inconsolata           3.000           h77eed37_0               conda-forge
  font-ttf-source-code-pro       2.038           h77eed37_0               conda-forge
  font-ttf-ubuntu                0.83            h77eed37_3               conda-forge
  fontconfig                     2.15.0          h7e30c49_1               conda-forge
  fonts-conda-ecosystem          1               0                        conda-forge
  fonts-conda-forge              1               0                        conda-forge
  fonttools                      4.59.0          py312h8a5da7c_0          conda-forge
  fqdn                           1.5.1           pyhd8ed1ab_1             conda-forge
  freetype                       2.13.3          ha770c72_1               conda-forge
  fribidi                        1.0.10          h36c2ea0_0               conda-forge
  gawk                           5.3.1           hcd3d067_0               conda-forge
  gcc_impl_linux-64              15.1.0          h4393ad2_3               conda-forge
  gfortran_impl_linux-64         15.1.0          h3b9cdf2_3               conda-forge
  glpk                           5.0             h445213a_0               conda-forge
  gmp                            6.3.0           hac33072_2               conda-forge
  graphite2                      1.3.14          h5888daf_0               conda-forge
  gsl                            2.7             he838d99_0               conda-forge
  gxx_impl_linux-64              15.1.0          h6a1bac1_3               conda-forge
  h11                            0.16.0          pyhd8ed1ab_0             conda-forge
  h2                             4.2.0           pyhd8ed1ab_0             conda-forge
  h5py                           3.14.0          nompi_py312h3faca00_100  conda-forge
  harfbuzz                       11.2.1          h3beb420_0               conda-forge
  hclust2                        1.0.0           pyh864c0ab_1             bioconda   
  hdf5                           1.14.6          nompi_h6e4c0c1_102       conda-forge
  hpack                          4.1.0           pyhd8ed1ab_0             conda-forge
  htslib                         1.22.1          h566b1c6_0               bioconda   
  httpcore                       1.0.9           pyh29332c3_0             conda-forge
  httpx                          0.28.1          pyhd8ed1ab_0             conda-forge
  hyperframe                     6.1.0           pyhd8ed1ab_0             conda-forge
  icu                            75.1            he02047a_0               conda-forge
  idna                           3.10            pyhd8ed1ab_1             conda-forge
  importlib-metadata             8.7.0           pyhe01879c_1             conda-forge
  ipykernel                      6.29.5          pyh3099207_0             conda-forge
  ipython                        9.4.0           pyhfa0c392_0             conda-forge
  ipython_pygments_lexers        1.1.1           pyhd8ed1ab_0             conda-forge
  iqtree                         3.0.1           h503566f_0               bioconda   
  isoduration                    20.11.0         pyhd8ed1ab_1             conda-forge
  jedi                           0.19.2          pyhd8ed1ab_1             conda-forge
  jinja2                         3.1.6           pyhd8ed1ab_0             conda-forge
  jq                             1.8.1           h73b1eb8_0               conda-forge
  json5                          0.12.0          pyhd8ed1ab_0             conda-forge
  jsonpointer                    3.0.0           py312h7900ff3_1          conda-forge
  jsonschema                     4.25.0          pyhe01879c_0             conda-forge
  jsonschema-specifications      2025.4.1        pyh29332c3_0             conda-forge
  jsonschema-with-format-nongpl  4.25.0          he01879c_0               conda-forge
  jupyter-lsp                    2.2.6           pyhe01879c_0             conda-forge
  jupyter_client                 8.6.3           pyhd8ed1ab_1             conda-forge
  jupyter_core                   5.8.1           pyh31011fe_0             conda-forge
  jupyter_events                 0.12.0          pyh29332c3_0             conda-forge
  jupyter_server                 2.16.0          pyhe01879c_0             conda-forge
  jupyter_server_terminals       0.5.3           pyhd8ed1ab_1             conda-forge
  jupyterlab                     4.4.5           pyhd8ed1ab_0             conda-forge
  jupyterlab_pygments            0.3.0           pyhd8ed1ab_2             conda-forge
  jupyterlab_server              2.27.3          pyhd8ed1ab_1             conda-forge
  k8                             1.2             he8db53b_6               bioconda   
  kernel-headers_linux-64        5.14.0          he073ed8_2               conda-forge
  keyutils                       1.6.1           h166bdaf_0               conda-forge
  kiwisolver                     1.4.8           py312h68727a3_1          conda-forge
  krb5                           1.21.3          h659f571_0               conda-forge
  lark                           1.2.2           pyhd8ed1ab_1             conda-forge
  lcms2                          2.17            h717163a_0               conda-forge
  ld_impl_linux-64               2.44            h1423503_1               conda-forge
  lerc                           4.0.0           h0aef613_1               conda-forge
  libaec                         1.1.4           h3f801dc_0               conda-forge
  libasprintf                    0.25.1          h8e693c7_0               conda-forge
  libblas                        3.9.0           32_h59b9bed_openblas     conda-forge
  libbrotlicommon                1.1.0           hb9d3cd8_3               conda-forge
  libbrotlidec                   1.1.0           hb9d3cd8_3               conda-forge
  libbrotlienc                   1.1.0           hb9d3cd8_3               conda-forge
  libcblas                       3.9.0           32_he106b2a_openblas     conda-forge
  libcurl                        8.14.1          h332b0f4_0               conda-forge
  libdeflate                     1.22            hb9d3cd8_0               conda-forge
  libedit                        3.1.20250104    pl5321h7949ede_0         conda-forge
  libev                          4.33            hd590300_2               conda-forge
  libexpat                       2.7.1           hecca717_0               conda-forge
  libffi                         3.4.6           h2dba641_1               conda-forge
  libfreetype                    2.13.3          ha770c72_1               conda-forge
  libfreetype6                   2.13.3          h48d6fc4_1               conda-forge
  libgcc                         15.1.0          h767d61c_3               conda-forge
  libgcc-devel_linux-64          15.1.0          h4c094af_103             conda-forge
  libgcc-ng                      15.1.0          h69a702a_3               conda-forge
  libgettextpo                   0.25.1          h5888daf_0               conda-forge
  libgfortran                    15.1.0          h69a702a_3               conda-forge
  libgfortran-ng                 15.1.0          h69a702a_3               conda-forge
  libgfortran5                   15.1.0          hcea5267_3               conda-forge
  libglib                        2.84.1          h2ff4ddf_0               conda-forge
  libgomp                        15.1.0          h767d61c_3               conda-forge
  libiconv                       1.18            h4ce23a2_1               conda-forge
  libidn2                        2.3.8           ha4ef2c3_0               conda-forge
  libjpeg-turbo                  3.1.0           hb9d3cd8_0               conda-forge
  liblapack                      3.9.0           32_h7ac8fdf_openblas     conda-forge
  liblzma                        5.8.1           hb9d3cd8_2               conda-forge
  libnghttp2                     1.64.0          h161d5f1_0               conda-forge
  libnsl                         2.0.1           hb9d3cd8_1               conda-forge
  libopenblas                    0.3.30          pthreads_h94d23a6_0      conda-forge
  libpng                         1.6.50          h943b412_0               conda-forge
  libsanitizer                   15.1.0          h97b714f_3               conda-forge
  libsodium                      1.0.20          h4ab18f5_0               conda-forge
  libsqlite                      3.50.3          hee844dc_0               conda-forge
  libssh2                        1.11.1          hcf80075_0               conda-forge
  libstdcxx                      15.1.0          h8f9b012_3               conda-forge
  libstdcxx-devel_linux-64       15.1.0          h4c094af_103             conda-forge
  libstdcxx-ng                   15.1.0          h4852527_3               conda-forge
  libtiff                        4.7.0           hc4654cb_2               conda-forge
  libunistring                   0.9.10          h7f98852_0               conda-forge
  libuuid                        2.38.1          h0b41bf4_0               conda-forge
  libuv                          1.51.0          hb9d3cd8_0               conda-forge
  libwebp-base                   1.6.0           hd42ef1d_0               conda-forge
  libxcb                         1.17.0          h8a09558_0               conda-forge
  libxcrypt                      4.4.36          hd590300_1               conda-forge
  libxml2                        2.13.8          h4bc477f_0               conda-forge
  libzlib                        1.3.1           hb9d3cd8_2               conda-forge
  mafft                          7.526           h4bc722e_0               conda-forge
  make                           4.4.1           hb9d3cd8_2               conda-forge
  markupsafe                     3.0.2           py312h178313f_1          conda-forge
  mash                           2.3             hb105d93_9               bioconda   
  matplotlib-base                3.10.3          py312hd3ec401_0          conda-forge
  matplotlib-inline              0.1.7           pyhd8ed1ab_1             conda-forge
  metaphlan                      4.2.2           pyhdfd78af_0             bioconda   
  minimap2                       2.30            h577a1d6_0               bioconda   
  mistune                        3.1.3           pyh29332c3_0             conda-forge
  mpfr                           4.2.1           h90cbb55_3               conda-forge
  munkres                        1.1.4           pyhd8ed1ab_1             conda-forge
  muscle                         5.3             h9948957_2               bioconda   
  nbclient                       0.10.2          pyhd8ed1ab_0             conda-forge
  nbconvert-core                 7.16.6          pyh29332c3_0             conda-forge
  nbformat                       5.10.4          pyhd8ed1ab_1             conda-forge
  ncbi-vdb                       3.2.1           h9948957_0               bioconda   
  ncurses                        6.5             h2d0b736_3               conda-forge
  nest-asyncio                   1.6.0           pyhd8ed1ab_1             conda-forge
  notebook                       7.4.4           pyhd8ed1ab_0             conda-forge
  notebook-shim                  0.2.4           pyhd8ed1ab_1             conda-forge
  numpy                          2.3.1           py312h33ff503_1          conda-forge
  oniguruma                      6.9.10          hb9d3cd8_0               conda-forge
  openjpeg                       2.5.3           h5fbd93e_0               conda-forge
  openssl                        3.5.1           h7b32b05_0               conda-forge
  overrides                      7.7.0           pyhd8ed1ab_1             conda-forge
  packaging                      25.0            pyh29332c3_1             conda-forge
  pandas                         2.3.1           py312hf79963d_0          conda-forge
  pandoc                         3.7.0.2         ha770c72_0               conda-forge
  pandocfilters                  1.5.0           pyhd8ed1ab_0             conda-forge
  pango                          1.56.3          h9ac818e_1               conda-forge
  parso                          0.8.4           pyhd8ed1ab_1             conda-forge
  patsy                          1.0.1           pyhd8ed1ab_1             conda-forge
  pcre2                          10.44           hc749103_2               conda-forge
  perl                           5.32.1          7_hd590300_perl5         conda-forge
  perl-archive-tar               3.04            pl5321hdfd78af_0         bioconda   
  perl-carp                      1.50            pl5321hd8ed1ab_0         conda-forge
  perl-common-sense              3.75            pl5321hd8ed1ab_0         conda-forge
  perl-compress-raw-bzip2        2.201           pl5321hbf60520_1         conda-forge
  perl-compress-raw-zlib         2.202           pl5321hadc24fc_0         conda-forge
  perl-encode                    3.21            pl5321hb9d3cd8_1         conda-forge
  perl-exporter                  5.74            pl5321hd8ed1ab_0         conda-forge
  perl-exporter-tiny             1.002002        pl5321hd8ed1ab_0         conda-forge
  perl-extutils-makemaker        7.70            pl5321hd8ed1ab_0         conda-forge
  perl-io-compress               2.201           pl5321h503566f_5         bioconda   
  perl-io-zlib                   1.15            pl5321hdfd78af_1         bioconda   
  perl-json                      4.10            pl5321hdfd78af_1         bioconda   
  perl-json-xs                   4.03            pl5321h9948957_4         bioconda   
  perl-list-moreutils            0.430           pl5321hdfd78af_0         bioconda   
  perl-list-moreutils-xs         0.430           pl5321h7b50bb2_5         bioconda   
  perl-parent                    0.243           pl5321hd8ed1ab_0         conda-forge
  perl-pathtools                 3.75            pl5321hb9d3cd8_2         conda-forge
  perl-scalar-list-utils         1.69            pl5321hb9d3cd8_0         conda-forge
  perl-storable                  3.15            pl5321hb9d3cd8_2         conda-forge
  perl-types-serialiser          1.01            pl5321hdfd78af_0         bioconda   
  pexpect                        4.9.0           pyhd8ed1ab_1             conda-forge
  phylophlan                     3.1.1           pyhdfd78af_0             bioconda   
  pickleshare                    0.7.5           pyhd8ed1ab_1004          conda-forge
  pillow                         11.3.0          py312h80c1187_0          conda-forge
  pip                            25.1.1          pyh8b19718_0             conda-forge
  pixman                         0.46.4          h537e5f6_0               conda-forge
  platformdirs                   4.3.8           pyhe01879c_0             conda-forge
  prometheus_client              0.22.1          pyhd8ed1ab_0             conda-forge
  prompt-toolkit                 3.0.51          pyha770c72_0             conda-forge
  psutil                         7.0.0           py312h66e93f0_0          conda-forge
  pthread-stubs                  0.4             hb9d3cd8_1002            conda-forge
  ptyprocess                     0.7.0           pyhd8ed1ab_1             conda-forge
  pure_eval                      0.2.3           pyhd8ed1ab_1             conda-forge
  pycparser                      2.22            pyh29332c3_1             conda-forge
  pygments                       2.19.2          pyhd8ed1ab_0             conda-forge
  pyparsing                      3.2.3           pyhd8ed1ab_1             conda-forge
  pysam                          0.23.3          py312h47d5410_0          bioconda   
  pysocks                        1.7.1           pyha55dd90_7             conda-forge
  python                         3.12.11         h9e4cc4f_0_cpython       conda-forge
  python-dateutil                2.9.0.post0     pyhe01879c_2             conda-forge
  python-fastjsonschema          2.21.1          pyhd8ed1ab_0             conda-forge
  python-json-logger             2.0.7           pyhd8ed1ab_0             conda-forge
  python-tzdata                  2025.2          pyhd8ed1ab_0             conda-forge
  python_abi                     3.12            8_cp312                  conda-forge
  pytz                           2025.2          pyhd8ed1ab_0             conda-forge
  pyyaml                         6.0.2           py312h178313f_2          conda-forge
  pyzmq                          27.0.0          py312hbf22597_0          conda-forge
  qhull                          2020.2          h434a139_5               conda-forge
  r-ade4                         1.7_23          r44hc2d650c_1            conda-forge
  r-ape                          5.8_1           r44hb79369c_0            conda-forge
  r-askpass                      1.2.1           r44h2b5f3a1_0            conda-forge
  r-assertthat                   0.2.1           r44hc72bb7e_5            conda-forge
  r-backports                    1.5.0           r44hb1dbf0f_1            conda-forge
  r-base                         4.4.2           hbab086e_1               conda-forge
  r-base64enc                    0.1_3           r44hb1dbf0f_1007         conda-forge
  r-bayesm                       3.1_6           r44hb424bfc_1            conda-forge
  r-beeswarm                     0.4.0           r44h2b5f3a1_4            conda-forge
  r-biocmanager                  1.30.26         r44hc72bb7e_0            conda-forge
  r-bit                          4.6.0           r44h2b5f3a1_0            conda-forge
  r-bit64                        4.6.0_1         r44h2b5f3a1_0            conda-forge
  r-blob                         1.2.4           r44hc72bb7e_2            conda-forge
  r-boot                         1.3_31          r44hc72bb7e_0            conda-forge
  r-broom                        1.0.8           r44hc72bb7e_0            conda-forge
  r-bslib                        0.9.0           r44hc72bb7e_0            conda-forge
  r-cachem                       1.1.0           r44hb1dbf0f_1            conda-forge
  r-callr                        3.7.6           r44hc72bb7e_1            conda-forge
  r-caret                        6.0_94          r44hdb488b9_2            conda-forge
  r-cellranger                   1.1.0           r44hc72bb7e_1007         conda-forge
  r-class                        7.3_23          r44h2b5f3a1_0            conda-forge
  r-cli                          3.6.5           r44h93ab643_0            conda-forge
  r-clipr                        0.8.0           r44hc72bb7e_3            conda-forge
  r-clock                        0.7.3           r44h93ab643_0            conda-forge
  r-cluster                      2.1.8.1         r44hb67ce94_0            conda-forge
  r-codetools                    0.2_20          r44hc72bb7e_1            conda-forge
  r-colorspace                   2.1_1           r44hdb488b9_0            conda-forge
  r-commonmark                   2.0.0           r44h2b5f3a1_0            conda-forge
  r-compositions                 2.0_8           r44h02ebe12_1            conda-forge
  r-conflicted                   1.2.0           r44h785f33e_2            conda-forge
  r-cpp11                        0.5.2           r44h785f33e_1            conda-forge
  r-crayon                       1.5.3           r44hc72bb7e_1            conda-forge
  r-crul                         1.5.0           r44h785f33e_0            conda-forge
  r-curl                         6.2.2           r44h2700575_0            conda-forge
  r-data.table                   1.17.6          r44he23165d_0            conda-forge
  r-dbi                          1.2.3           r44hc72bb7e_1            conda-forge
  r-dbplyr                       2.5.0           r44hc72bb7e_1            conda-forge
  r-deoptimr                     1.1_3_1         r44hc72bb7e_0            conda-forge
  r-diagram                      1.6.5           r44ha770c72_3            conda-forge
  r-digest                       0.6.37          r44h0d4f4ea_0            conda-forge
  r-dplyr                        1.1.4           r44h0d4f4ea_1            conda-forge
  r-dtplyr                       1.3.1           r44hc72bb7e_2            conda-forge
  r-e1071                        1.7_16          r44h93ab643_0            conda-forge
  r-ellipsis                     0.3.2           r44hb1dbf0f_3            conda-forge
  r-emmeans                      1.11.2          r44hc72bb7e_0            conda-forge
  r-essentials                   4.4             r44hd8ed1ab_2005         conda-forge
  r-estimability                 1.5.1           r44hc72bb7e_0            conda-forge
  r-evaluate                     1.0.4           r44hc72bb7e_0            conda-forge
  r-fansi                        1.0.6           r44hb1dbf0f_1            conda-forge
  r-farver                       2.1.2           r44ha18555a_1            conda-forge
  r-fastmap                      1.2.0           r44ha18555a_1            conda-forge
  r-fillpattern                  1.0.2           r44hc72bb7e_1            conda-forge
  r-fontawesome                  0.5.3           r44hc72bb7e_0            conda-forge
  r-forcats                      1.0.0           r44hc72bb7e_2            conda-forge
  r-foreach                      1.5.2           r44hc72bb7e_3            conda-forge
  r-foreign                      0.8_90          r44h2b5f3a1_0            conda-forge
  r-formatr                      1.14            r44hc72bb7e_2            conda-forge
  r-fs                           1.6.6           r44h93ab643_0            conda-forge
  r-future                       1.58.0          r44h785f33e_0            conda-forge
  r-future.apply                 1.20.0          r44hc72bb7e_0            conda-forge
  r-gargle                       1.5.2           r44h785f33e_1            conda-forge
  r-generics                     0.1.4           r44hc72bb7e_0            conda-forge
  r-getopt                       1.20.4          r44ha770c72_1            conda-forge
  r-ggbeeswarm                   0.7.2           r44hc72bb7e_2            conda-forge
  r-ggnewscale                   0.5.2           r44hc72bb7e_0            conda-forge
  r-ggplot2                      3.5.2           r44hc72bb7e_0            conda-forge
  r-ggrepel                      0.9.6           r44h93ab643_0            conda-forge
  r-ggtext                       0.1.2           r44hc72bb7e_3            conda-forge
  r-gistr                        0.9.0           r44hc72bb7e_3            conda-forge
  r-glmnet                       4.1_10          r44ha36cffa_0            conda-forge
  r-globals                      0.18.0          r44hc72bb7e_0            conda-forge
  r-glue                         1.8.0           r44h2b5f3a1_0            conda-forge
  r-googledrive                  2.1.1           r44hc72bb7e_2            conda-forge
  r-googlesheets4                1.1.1           r44h785f33e_2            conda-forge
  r-gower                        1.0.1           r44hb1dbf0f_2            conda-forge
  r-gridtext                     0.1.5           r44h0d4f4ea_3            conda-forge
  r-gtable                       0.3.6           r44hc72bb7e_0            conda-forge
  r-hardhat                      1.4.1           r44hc72bb7e_0            conda-forge
  r-haven                        2.5.4           r44h0d4f4ea_1            conda-forge
  r-hexbin                       1.28.5          r44hb67ce94_0            conda-forge
  r-highr                        0.11            r44hc72bb7e_1            conda-forge
  r-hms                          1.1.3           r44hc72bb7e_2            conda-forge
  r-htmltools                    0.5.8.1         r44ha18555a_1            conda-forge
  r-htmlwidgets                  1.6.4           r44h785f33e_3            conda-forge
  r-httpcode                     0.3.0           r44ha770c72_4            conda-forge
  r-httpuv                       1.6.15          r44ha18555a_1            conda-forge
  r-httr                         1.4.7           r44hc72bb7e_1            conda-forge
  r-ids                          1.0.1           r44hc72bb7e_4            conda-forge
  r-igraph                       2.0.3           r44h510f1ce_1            conda-forge
  r-ipred                        0.9_15          r44hdb488b9_1            conda-forge
  r-irdisplay                    1.1             r44hd8ed1ab_3            conda-forge
  r-irkernel                     1.3.2           r44h785f33e_2            conda-forge
  r-isoband                      0.2.7           r44ha18555a_3            conda-forge
  r-iterators                    1.0.14          r44hc72bb7e_3            conda-forge
  r-jpeg                         0.1_11          r44hc5f1ce6_0            conda-forge
  r-jquerylib                    0.1.4           r44hc72bb7e_3            conda-forge
  r-jsonlite                     2.0.0           r44h2b5f3a1_0            conda-forge
  r-kernsmooth                   2.23_26         r44h8461fee_0            conda-forge
  r-knitr                        1.50            r44hc72bb7e_0            conda-forge
  r-labeling                     0.4.3           r44hc72bb7e_1            conda-forge
  r-later                        1.4.2           r44h93ab643_0            conda-forge
  r-lattice                      0.22_7          r44h2b5f3a1_0            conda-forge
  r-lava                         1.8.1           r44hc72bb7e_0            conda-forge
  r-lazyeval                     0.2.2           r44hb1dbf0f_5            conda-forge
  r-lifecycle                    1.0.4           r44hc72bb7e_1            conda-forge
  r-listenv                      0.9.1           r44hc72bb7e_1            conda-forge
  r-litedown                     0.7             r44hc72bb7e_0            conda-forge
  r-lobstr                       1.1.2           r44ha18555a_4            conda-forge
  r-lubridate                    1.9.4           r44h2b5f3a1_0            conda-forge
  r-magrittr                     2.0.3           r44hb1dbf0f_3            conda-forge
  r-maps                         3.4.3           r44h2b5f3a1_0            conda-forge
  r-markdown                     2.0             r44hc72bb7e_0            conda-forge
  r-mass                         7.3_64          r44h2b5f3a1_0            conda-forge
  r-matrix                       1.7_3           r44h2ae2be5_0            conda-forge
  r-memoise                      2.0.1           r44hc72bb7e_3            conda-forge
  r-mgcv                         1.9_3           r44h2ae2be5_0            conda-forge
  r-mime                         0.13            r44h2b5f3a1_0            conda-forge
  r-modelmetrics                 1.2.2.2         r44h0d4f4ea_4            conda-forge
  r-modelr                       0.1.11          r44hc72bb7e_2            conda-forge
  r-munsell                      0.5.1           r44hc72bb7e_1            conda-forge
  r-mvtnorm                      1.3_3           r44h9ad1c49_0            conda-forge
  r-nlme                         3.1_168         r44hb67ce94_0            conda-forge
  r-nnet                         7.3_20          r44h2b5f3a1_0            conda-forge
  r-numderiv                     2016.8_1.1      r44hc72bb7e_6            conda-forge
  r-openssl                      2.3.3           r44he8289e2_0            conda-forge
  r-openxlsx                     4.2.8           r44h93ab643_0            conda-forge
  r-optparse                     1.7.5           r44hc72bb7e_1            conda-forge
  r-parallelly                   1.45.0          r44h2b5f3a1_0            conda-forge
  r-patchwork                    1.3.1           r44hc72bb7e_0            conda-forge
  r-pbdzmq                       0.3_14          r44h549f438_0            conda-forge
  r-permute                      0.9_8           r44hc72bb7e_0            conda-forge
  r-pillar                       1.11.0          r44hc72bb7e_0            conda-forge
  r-pixmap                       0.4_13          r44hc72bb7e_1            conda-forge
  r-pkgconfig                    2.0.3           r44hc72bb7e_4            conda-forge
  r-plyr                         1.8.9           r44ha18555a_1            conda-forge
  r-png                          0.1_8           r44h21f035c_2            conda-forge
  r-prettyunits                  1.2.0           r44hc72bb7e_1            conda-forge
  r-proc                         1.18.5          r44ha18555a_1            conda-forge
  r-processx                     3.8.6           r44h2b5f3a1_0            conda-forge
  r-prodlim                      2025.04.28      r44h93ab643_0            conda-forge
  r-progress                     1.2.3           r44hc72bb7e_1            conda-forge
  r-progressr                    0.15.1          r44hc72bb7e_0            conda-forge
  r-promises                     1.3.2           r44h93ab643_0            conda-forge
  r-proxy                        0.4_27          r44hb1dbf0f_3            conda-forge
  r-pryr                         0.1.6           r44h0d4f4ea_2            conda-forge
  r-ps                           1.9.1           r44h2b5f3a1_0            conda-forge
  r-purrr                        1.1.0           r44h54b55ab_0            conda-forge
  r-quantmod                     0.4.28          r44hc72bb7e_0            conda-forge
  r-r.methodss3                  1.8.2           r44hc72bb7e_3            conda-forge
  r-r.oo                         1.27.1          r44hc72bb7e_0            conda-forge
  r-r.utils                      2.13.0          r44hc72bb7e_0            conda-forge
  r-r6                           2.6.1           r44hc72bb7e_0            conda-forge
  r-ragg                         1.4.0           r44hdcc764c_0            conda-forge
  r-randomforest                 4.7_1.2         r44hb67ce94_0            conda-forge
  r-rappdirs                     0.3.3           r44hb1dbf0f_3            conda-forge
  r-rbiom                        2.2.1           r44h93ab643_0            conda-forge
  r-rbokeh                       0.5.2           r44hc72bb7e_4            conda-forge
  r-rcolorbrewer                 1.1_3           r44h785f33e_3            conda-forge
  r-rcpp                         1.1.0           r44h93ab643_0            conda-forge
  r-rcpparmadillo                14.4.2_1        r44hc2d650c_0            conda-forge
  r-rcppeigen                    0.3.4.0.2       r44hb79369c_0            conda-forge
  r-readr                        2.1.5           r44h0d4f4ea_1            conda-forge
  r-readxl                       1.4.5           r44h328fee5_0            conda-forge
  r-recipes                      1.3.1           r44hc72bb7e_0            conda-forge
  r-recommended                  4.4             r44hd8ed1ab_1007         conda-forge
  r-rematch                      2.0.0           r44hc72bb7e_1            conda-forge
  r-rematch2                     2.1.2           r44hc72bb7e_4            conda-forge
  r-repr                         1.1.7           r44h785f33e_1            conda-forge
  r-reprex                       2.1.1           r44hc72bb7e_1            conda-forge
  r-reshape2                     1.4.4           r44h0d4f4ea_4            conda-forge
  r-rjson                        0.2.23          r44h93ab643_0            conda-forge
  r-rlang                        1.1.6           r44h93ab643_0            conda-forge
  r-rmarkdown                    2.29            r44hc72bb7e_0            conda-forge
  r-robustbase                   0.99_4_1        r44h9ad1c49_0            conda-forge
  r-rpart                        4.1.24          r44h2b5f3a1_0            conda-forge
  r-rstudioapi                   0.17.1          r44hc72bb7e_0            conda-forge
  r-rtsne                        0.17            r44h4387864_1            conda-forge
  r-rvest                        1.0.4           r44hc72bb7e_1            conda-forge
  r-sass                         0.4.10          r44h93ab643_0            conda-forge
  r-scales                       1.4.0           r44hc72bb7e_0            conda-forge
  r-selectr                      0.4_2           r44hc72bb7e_4            conda-forge
  r-shape                        1.4.6.1         r44ha770c72_1            conda-forge
  r-shiny                        1.11.1          r44h785f33e_0            conda-forge
  r-slam                         0.1_55          r44h0444075_0            conda-forge
  r-sourcetools                  0.1.7_1         r44ha18555a_2            conda-forge
  r-sp                           2.2_0           r44h2b5f3a1_0            conda-forge
  r-sparsevctrs                  0.3.4           r44h2b5f3a1_0            conda-forge
  r-spatial                      7.3_18          r44h2b5f3a1_0            conda-forge
  r-squarem                      2021.1          r44hc72bb7e_3            conda-forge
  r-stringi                      1.8.7           r44h3c328a7_0            conda-forge
  r-stringr                      1.5.1           r44h785f33e_1            conda-forge
  r-survival                     3.8_3           r44h2b5f3a1_0            conda-forge
  r-sys                          3.4.3           r44h2b5f3a1_0            conda-forge
  r-systemfonts                  1.2.3           r44h5c043a3_0            conda-forge
  r-tensora                      0.36.2.1        r44hb1dbf0f_1            conda-forge
  r-textshaping                  1.0.1           r44h16f7c1a_0            conda-forge
  r-tibble                       3.3.0           r44h2b5f3a1_0            conda-forge
  r-tidyr                        1.3.1           r44h0d4f4ea_1            conda-forge
  r-tidyselect                   1.2.1           r44hc72bb7e_1            conda-forge
  r-tidyverse                    2.0.0           r44h785f33e_2            conda-forge
  r-timechange                   0.3.0           r44ha18555a_1            conda-forge
  r-timedate                     4041.110        r44hc72bb7e_0            conda-forge
  r-tinytex                      0.57            r44hc72bb7e_0            conda-forge
  r-triebeard                    0.4.1           r44ha18555a_2            conda-forge
  r-ttr                          0.24.4          r44hdb488b9_1            conda-forge
  r-tzdb                         0.5.0           r44h93ab643_0            conda-forge
  r-urltools                     1.7.3           r44ha18555a_5            conda-forge
  r-utf8                         1.2.6           r44h2b5f3a1_0            conda-forge
  r-uuid                         1.2_1           r44hdb488b9_0            conda-forge
  r-vctrs                        0.6.5           r44h0d4f4ea_1            conda-forge
  r-vegan                        2.7_1           r44h012206f_0            conda-forge
  r-vipor                        0.4.7           r44hc72bb7e_1            conda-forge
  r-viridislite                  0.4.2           r44hc72bb7e_2            conda-forge
  r-vroom                        1.6.5           r44h0d4f4ea_1            conda-forge
  r-withr                        3.0.2           r44hc72bb7e_0            conda-forge
  r-xfun                         0.52            r44h93ab643_0            conda-forge
  r-xml2                         1.3.8           r44h1bb2df6_0            conda-forge
  r-xtable                       1.8_4           r44hc72bb7e_6            conda-forge
  r-xts                          0.14.1          r44h2b5f3a1_0            conda-forge
  r-yaml                         2.3.10          r44hdb488b9_0            conda-forge
  r-zip                          2.3.3           r44h2b5f3a1_0            conda-forge
  r-zoo                          1.8_14          r44h2b5f3a1_0            conda-forge
  raxml                          8.2.13          h7b50bb2_3               bioconda   
  readline                       8.2             h8c095d6_2               conda-forge
  referencing                    0.36.2          pyh29332c3_0             conda-forge
  requests                       2.32.4          pyhd8ed1ab_0             conda-forge
  rfc3339-validator              0.1.4           pyhd8ed1ab_1             conda-forge
  rfc3986-validator              0.1.1           pyh9f0ad1d_0             conda-forge
  rfc3987-syntax                 1.1.0           pyhe01879c_1             conda-forge
  rpds-py                        0.26.0          py312h680f630_0          conda-forge
  rpsbproc                       0.5.0           hd6d6fdc_3               bioconda   
  samtools                       1.22.1          h96c455f_0               bioconda   
  scipy                          1.16.0          py312hf734454_0          conda-forge
  seaborn                        0.13.2          hd8ed1ab_3               conda-forge
  seaborn-base                   0.13.2          pyhd8ed1ab_3             conda-forge
  sed                            4.9             h6688a6e_0               conda-forge
  send2trash                     1.8.3           pyh0d859eb_1             conda-forge
  setuptools                     80.9.0          pyhff2d567_0             conda-forge
  six                            1.17.0          pyhe01879c_1             conda-forge
  sniffio                        1.3.1           pyhd8ed1ab_1             conda-forge
  soupsieve                      2.7             pyhd8ed1ab_0             conda-forge
  stack_data                     0.6.3           pyhd8ed1ab_1             conda-forge
  statsmodels                    0.14.5          py312h8b63200_0          conda-forge
  sysroot_linux-64               2.34            h087de78_2               conda-forge
  terminado                      0.18.1          pyh0d859eb_0             conda-forge
  tinycss2                       1.4.0           pyhd8ed1ab_0             conda-forge
  tk                             8.6.13          noxft_hd72426e_102       conda-forge
  tktable                        2.10            h8d826fa_7               conda-forge
  toml                           0.10.2          pyhd8ed1ab_1             conda-forge
  tomli                          2.2.1           pyhd8ed1ab_1             conda-forge
  tomlkit                        0.13.3          pyha770c72_0             conda-forge
  tornado                        6.5.1           py312h66e93f0_0          conda-forge
  traitlets                      5.14.3          pyhd8ed1ab_1             conda-forge
  trimal                         1.5.0           h9948957_2               bioconda   
  types-python-dateutil          2.9.0.20250708  pyhd8ed1ab_0             conda-forge
  typing-extensions              4.14.1          h4440ef1_0               conda-forge
  typing_extensions              4.14.1          pyhe01879c_0             conda-forge
  typing_utils                   0.1.0           pyhd8ed1ab_1             conda-forge
  tzdata                         2025b           h78e105d_0               conda-forge
  unicodedata2                   16.0.0          py312h66e93f0_0          conda-forge
  uri-template                   1.3.0           pyhd8ed1ab_1             conda-forge
  urllib3                        2.5.0           pyhd8ed1ab_0             conda-forge
  wcwidth                        0.2.13          pyhd8ed1ab_1             conda-forge
  webcolors                      24.11.1         pyhd8ed1ab_0             conda-forge
  webencodings                   0.5.1           pyhd8ed1ab_3             conda-forge
  websocket-client               1.8.0           pyhd8ed1ab_1             conda-forge
  wget                           1.21.4          hda4d442_0               conda-forge
  wheel                          0.45.1          pyhd8ed1ab_1             conda-forge
  xmltodict                      0.14.2          pyhd8ed1ab_1             conda-forge
  xorg-libice                    1.1.2           hb9d3cd8_0               conda-forge
  xorg-libsm                     1.2.6           he73a12e_0               conda-forge
  xorg-libx11                    1.8.12          h4f16b4b_0               conda-forge
  xorg-libxau                    1.0.12          hb9d3cd8_0               conda-forge
  xorg-libxdmcp                  1.1.5           hb9d3cd8_0               conda-forge
  xorg-libxext                   1.3.6           hb9d3cd8_0               conda-forge
  xorg-libxrender                0.9.12          hb9d3cd8_0               conda-forge
  xorg-libxt                     1.3.1           hb9d3cd8_0               conda-forge
  yaml                           0.2.5           h7f98852_2               conda-forge
  yq                             3.4.3           pyhe01879c_2             conda-forge
  zeromq                         4.3.5           h3b0a872_7               conda-forge
  zipp                           3.23.0          pyhd8ed1ab_0             conda-forge
  zlib                           1.3.1           hb9d3cd8_2               conda-forge
  zstandard                      0.23.0          py312h66e93f0_2          conda-forge
  zstd                           1.5.7           hb8e6e7a_2               conda-forge
```

</details>

Basic information on how to use this tool:
- executable: metaphlan
- help: -h
- version: -v
- description: MetaPhlAn is a computational tool for species-level microbial profiling (bacteria, archaea, eukaryotes, and viruses) from metagenomic shotgun sequencing data. StrainPhlAn (available within MetaPhlAn) allows strain-level microbial population genomics.

Additional information:

Warning: running MetaPhlAn 4 requires a minimum of 25GB of memory or more.

The database can be downloaded from [Segatalab FTP](http://cmprod1.cibio.unitn.it/biobakery4/metaphlan_databases/) or via metaphlan with the following command:

```metaphlan --install```

Full documentation: https://github.com/biobakery/biobakery/wiki/metaphlan4

## Example Usage

```bash
metaphlan metagenome.fastq --input_type fastq -o profiled_metagenome.txt
```
